# CatImg

./: CMakeLists.txt  README.MD
src/: CatImg.cpp  CatMovie.cpp
user/: CatMovie
user/Opencv/lib/: libopencv_highgui.so.4.5.5  libopencv_imgcodecs.so.405
user/Opencv/lib/cmake/opencv4/: OpenCVModules-release.cmake
user/rk3588_opencv455/include/opencv4/opencv2/: opencv_modules.hpp
user/rk3588_opencv455/lib/: libopencv_highgui.so.4.5.5  libopencv_imgcodecs.so.4.5.5  libopencv_videoio.so.4.5.5
user/rk3588_opencv455/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
